It works, update the version to prove it!

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ChatPing
 main: com.notoriousdev.chatping.ChatPing
-version: 0.0.1-SNAPSHOT
+version: 1.0
 author: BranicYeti
 website: http://www.notoriousdev.com
 
