--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <!--More information about the project-->
     <name>ChatPing</name>
-    <url>http://www.deityhosting.co.uk/</url>
+    <url>http://www.notoriousdev.com/</url>
 
     <!--Don't touch this either-->
     <properties>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.5-R0.1-SNAPSHOT</version>
+            <version>1.7.2-R0.3-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
