--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: ChatPing
 main: com.notoriousdev.chatping.ChatPing
 version: 1.1
+api-version: 1.16
 author: BranicYeti
 website: http://www.notoriousdev.com
 
